--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,6 @@ services:
     tty: true
     build: ./frontend
     volumes:
-      - static:/app/frontend/static
       - ./frontend:/app/frontend
       - node-modules:/app/frontend/node_modules
     ports:
@@ -42,11 +41,10 @@ services:
       - 80:8080
     volumes:
       - ./config/nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
-      - static:/var/www/frontend
+      - ./frontend/static:/var/www/frontend
     depends_on:
       - web
       - frontend
 
 volumes:
   node-modules:
-  static:
